--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 kotlin.code.style=official
 group=com.github.pikokr
 version=1.0.0
-pluginName=Sample
-pluginMain =com.github.pikokr.sample.plugin.Plugin
+pluginName=ShareInv
+pluginMain =com.github.pikokr.invshare.plugin.Plugin
